[package]
name = "bubble"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["wav", "wayland"] }
rand = "0.8"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 's'
